<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginTop="8dp"
            android:textSize="30sp"
            android:textAlignment="textEnd"
            android:padding="8dp"
            android:background="@drawable/text_bg"
            android:hint="@string/result"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginTop="8dp"
            android:textSize="30sp"
            android:textAlignment="textEnd"
            android:padding="8dp"
            android:hint="@string/calculate"
            android:background="@drawable/text_bg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result"/>

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/display"
                android:layout_gravity="center"
                android:columnCount="4"
                android:orientation="horizontal" >

        <Button
                android:layout_column="3"
                android:text="@string/allclear" android:onClick="allClear" />

        <Button android:text="@string/seven" android:onClick="numberSmash" />

        <Button android:text="@string/eight" android:onClick="numberSmash" />

        <Button android:text="@string/nine" android:onClick="numberSmash" />

        <Button android:text="@string/multiply" android:onClick="operatorSmash" />

        <Button android:text="@string/four" android:onClick="numberSmash" />

        <Button android:text="@string/five" android:onClick="numberSmash" />

        <Button android:text="@string/six" android:onClick="numberSmash" />

        <Button android:text="@string/divide" android:onClick="numberSmash" />

        <Button android:text="@string/one" android:onClick="numberSmash" />

        <Button android:text="@string/two" android:onClick="numberSmash" />

        <Button android:text="@string/three" android:onClick="numberSmash" />

        <Button android:text="@string/subtract" android:onClick="operatorSmash" />

        <Button
                android:layout_columnSpan="2"
                android:layout_gravity="fill"
                android:onClick="numberSmash"
                android:text="@string/zero" />

        <Button android:text="@string/equals" android:onClick="equalHit" />

        <Button android:text="@string/add" android:onClick="operatorSmash" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>